--- a/No Poop No Life/Base.lproj/Main.storyboard
+++ b/No Poop No Life/Base.lproj/Main.storyboard
@@ -18,17 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view tag="100" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Md-lt-hxM" customClass="GADBannerView">
+                            <view tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Md-lt-hxM" customClass="GADBannerView">
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="5WD-Pg-3zC"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="3Md-lt-hxM" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" id="PO7-06-mpI"/>
-                            <constraint firstItem="3Md-lt-hxM" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" id="byu-Ze-gRh"/>
-                            <constraint firstItem="3Md-lt-hxM" firstAttribute="trailing" secondItem="4qk-I5-YsI" secondAttribute="trailing" id="gyU-HG-zTd"/>
+                            <constraint firstItem="3Md-lt-hxM" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" id="dOH-ee-gFQ"/>
+                            <constraint firstItem="3Md-lt-hxM" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" id="gbi-qe-ZUC"/>
+                            <constraint firstItem="3Md-lt-hxM" firstAttribute="trailing" secondItem="4qk-I5-YsI" secondAttribute="trailing" id="t0D-lT-E5J"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                     </view>
